# sc-solana-examples

./: .gitignore  Cargo.toml  README.md  package.json
accounts/: README.md
burntokens/: README.md  package-lock.json  package.json
burntokens/scripts/: burn-token.mjs
calculator/: .gitignore  Anchor.toml  Cargo.toml  README.md
calculator/.program_client/: Cargo.toml
calculator/.program_client/src/: lib.rs
calculator/keys/: id.json
calculator/programs/calculator/: Cargo.toml
calculator/programs/calculator/src/: lib.rs
calculator/tests/: calculator.ts
calculator/trdelnik-tests/: Cargo.toml
calculator/trdelnik-tests/tests/: backy_test.rs  test.rs  working_test.rs
ecoswap/: .gitignore  README.md
ecoswap/client/: main.ts
ecoswap/program/: README.md
ecoswap/program/src/: lib.rs
helloworld-counter/: Cargo.toml  README.md  package-lock.json  package.json
helloworld-counter/src/: entrypoint.rs  processor.rs
pda/: README.md
soltransfer/: README.md  package-lock.json  package.json
soltransfer/client/: main.ts
soltransfer/program/src/: lib.rs
spltransfer/: .gitignore  README.md  package-lock.json
spltransfer/client/: main.ts
spltransfer/program/src/: lib.rs
src/: entrypoint.rs  lib.rs  processor.rs
tictactoe/: Anchor.toml  README.md
tictactoe/programs/tic-tac-toe/src/: lib.rs
tictactoe/programs/tic-tac-toe/src/instructions/: setup_game.rs
tictactoe/programs/tic-tac-toe/src/state/: game.rs
ttt/: Anchor.toml
ttt/programs/tic-tac-toe/: Cargo.toml
ttt/programs/tic-tac-toe/src/: errors.rs  lib.rs
(+3 files in other folders)
