[package]
name = "helloworld_counter"
version = "0.0.1"
description = "Solana Program to emit test events"
authors = ["Irene Fabris <irene@balloonbox.io>"]
repository = "https://github.com/irene-bbox/sc-solana-examples.git"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
solana-program = "1.14.8"

[dev-dependencies]
solana-program-test = "1.14.8"
solana-sdk = "1.14.8"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]